--- a/app/views/users/edit/edit-vegetable-form.template.html
+++ b/app/views/users/edit/edit-vegetable-form.template.html
@@ -680,7 +680,10 @@
 				</tr>
 			</table>
 		</div>
-		<center><button style="margin-top: 30px;" type="submit" ng-click="updatePost()" class="btn btn-success btn-lg">Cập nhật</button></center>
+		<div class="bottom-nav">
+	<button type="submit" ng-click="updatePost()" class="btn btn-success btn-lg">Cập nhật</button>
+	<button id="back-to-top" type="button" class="btn btn-default">Top</button>
+	</div>
 	</form>
 </div>
 <!-- Custom input file -->
