--- a/views/alte-custom-menu.ejs
+++ b/views/alte-custom-menu.ejs
@@ -10,7 +10,7 @@
 			<ul class="dropdown-menu">
 				<!-- User image -->
 				<li class="user-header">
-					<img src="/admin/dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
+					<img src="<%= (('avatar' in user) && ('original' in user.avatar) && (user.avatar.original)) ? ('/' + user.avatar.original) : '/admin/dist/img/user4-128x128.jpg' %>" class="img-circle" alt="User Image" onclick="window.location.href = '/users/me'" style="cursor: pointer">
 
 					<p>
 						<%= user.fullname %>
@@ -27,10 +27,10 @@
 				<!-- Menu Footer-->
 				<li class="user-body bg-success">
 					<div class="pull-left">
-						<a href="/home" class="btn btn-success btn-flat">Home</a>
+						<a href="/home" class="btn btn-success btn-flat">Trang chủ</a>
 					</div>
 					<div class="pull-right">
-						<a href="/auth/logout" class="btn btn-warning btn-flat">Sign out</a>
+						<a href="/auth/logout" class="btn btn-warning btn-flat">Đăng xuất</a>
 					</div>
 				</li>
 			</ul>
