--- a/views/admin/users.ejs
+++ b/views/admin/users.ejs
@@ -38,25 +38,7 @@
 <div class="wrapper">
 
 	<header class="main-header">
-		<!-- Logo -->
-		<a href="/admin" class="logo">
-			<!-- mini logo for sidebar mini 50x50 pixels -->
-			<span class="logo-mini"><b>A</b></span>
-			<!-- logo for regular state and mobile devices -->
-			<span class="logo-lg"><b>Admin</b></span>
-		</a>
-		<!-- Header Navbar: style can be found in header.less -->
-		<nav class="navbar navbar-static-top">
-			<!-- Sidebar toggle button-->
-			<a href="#" class="sidebar-toggle" data-toggle="offcanvas" role="button">
-				<span class="sr-only">Toggle navigation</span>
-				<span class="icon-bar"></span>
-				<span class="icon-bar"></span>
-				<span class="icon-bar"></span>
-			</a>
-
-			<% include ../alte-custom-menu %>
-		</nav>
+		<% include ../alte-header %>
 	</header>
 	<!-- Left side column. contains the logo and sidebar -->
 	<aside class="main-sidebar">
