--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -29,33 +29,7 @@
 <div class="wrapper">
 
   <header class="main-header">
-    <!-- Logo -->
-    <a href="/admin/index2.html" class="logo">
-      <%
-        let objh = {
-          'admin': {full: 'Admin', short: 'A'},
-          'manager': {full: 'Manager', short: 'M'},
-          'user': {full: 'User', short: 'U'},
-          'pending-user': {full: 'User', short: 'U'},
-        }
-      %>
-      <!-- mini logo for sidebar mini 50x50 pixels -->
-      <span class="logo-mini"><b><%= objh[user.level].short %></b></span>
-      <!-- logo for regular state and mobile devices -->
-      <span class="logo-lg"><b><%= objh[user.level].full %></b></span>
-    </a>
-    <!-- Header Navbar: style can be found in header.less -->
-    <nav class="navbar navbar-static-top">
-      <!-- Sidebar toggle button-->
-      <a href="#" class="sidebar-toggle" data-toggle="offcanvas" role="button">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </a>
-
-      <% include alte-custom-menu %>
-    </nav>
+    <% include alte-header %>
   </header>
   <!-- Left side column. contains the logo and sidebar -->
   <aside class="main-sidebar">
@@ -70,7 +44,7 @@
         Trang cá nhân
       </h1>
       <ol class="breadcrumb">
-        <li><a href="#"><i class="fa fa-dashboard"></i> Trang chủ</a></li>
+        <li><a href="/home"><i class="fa fa-dashboard"></i> Trang chủ</a></li>
         <li class="active">Trang cá nhân</li>
       </ol>
     </section>
