--- a/app/asset/css/main.css
+++ b/app/asset/css/main.css
@@ -52,12 +52,24 @@ body {
 .navbar-default{
 	background-color: #19C662;
 }
-.navbar-default .navbar-nav>li>a {
+
+.navbar-brand{
+    /*background-color: mediumturquoise;*/
+}
+.navbar-default .navbar-brand:hover{
+    background-color: #d3fdaf;
+    color: #000;
+}
+.navbar-default .navbar-nav > li > a {
 	color: #fff;
 }
 .navbar-default .navbar-nav>li>a:hover{
 	background-color: #d3fdaf;
 }
+
+.navbar-default .navbar-nav > .open > a:focus{
+    background-color: #d3fdaf;
+ }
 
 .navbar-default .navbar-brand {
     color: #f5f5f5;
