--- a/views/alte-left-sidebar.ejs
+++ b/views/alte-left-sidebar.ejs
@@ -3,7 +3,7 @@
 			<!-- Sidebar user panel -->
 			<div class="user-panel">
 				<div class="pull-left image">
-					<img src="<%= (('avatar' in user) && ('original' in user.avatar) && (user.avatar.original)) ? ('/' + user.avatar.original) : '/admin/dist/img/user4-128x128.jpg' %>" class="img-circle" style="width: 50px; height: 50px" alt="User Image">
+					<a href="/users/me"><img src="<%= (('avatar' in user) && ('original' in user.avatar) && (user.avatar.original)) ? ('/' + user.avatar.original) : '/admin/dist/img/user4-128x128.jpg' %>" class="img-circle" style="width: 50px; height: 50px" alt="User Image"></a>
 				</div>
 				<div class="pull-left info">
 					<p><%= user.fullname %></p>
@@ -11,7 +11,7 @@
 				</div>
 			</div>
 			<!-- search form -->
-			<form action="#" method="get" class="sidebar-form">
+			<!--<form action="#" method="get" class="sidebar-form">
 				<div class="input-group">
 					<input type="text" name="q" class="form-control" placeholder="Tìm kiếm...">
 							<span class="input-group-btn">
@@ -19,7 +19,7 @@
 								</button>
 							</span>
 				</div>
-			</form>
+			</form>-->
 			<!-- /.search form -->
 			<!-- sidebar menu: : style can be found in sidebar.less -->
 			<ul class="sidebar-menu">
