--- a/app/asset/css/main.css
+++ b/app/asset/css/main.css
@@ -99,6 +99,11 @@ body {
     z-index: 1000;
 }
 
+.dropdown-menu{
+    background-color: azure;
+    border: 0px;
+}
+
 .dropdown-content a {
 	border-radius: 0px 4px 4px 0px;
     color: black;
@@ -121,7 +126,7 @@ a.nav:hover{
 }
 
 .dropdown:hover .dropdown-content {
-     transition: width 1s;
+    transition: width 1s;
     -webkit-transition: width 1s; /* Safari 3.1 to 6.0 */
     display: block;
 }
@@ -223,7 +228,9 @@ a.nav:hover{
 }
 
 @media only screen and (max-width: 768px){
-
+    .navbar-default .navbar-nav .open .dropdown-menu > li > a{
+      color: #000;  
+    }
 }
 
 /*  480px hoặc nhỏ hơn */
