--- a/views/admin/users.ejs
+++ b/views/admin/users.ejs
@@ -34,7 +34,7 @@
 		}
 	</style>
 </head>
-<body class="hold-transition skin-blue sidebar-mini">
+<body class="hold-transition skin-green sidebar-mini">
 <div class="wrapper">
 
 	<header class="main-header">
