recovery middleware for FE

--- a/views/manager/chartjs.ejs
+++ b/views/manager/chartjs.ejs
@@ -241,7 +241,7 @@
 					"datasets": [
 						{
 							"data": dataForBarCharts,
-							"backgroundColor": "#36A2EB",
+							"backgroundColor": "#4BC0C0",
 							"label": "Tổng số mẫu vật"
 						}
 					],
