add modal notification

--- a/app/views/modals/dialogs.blade.html
+++ b/app/views/modals/dialogs.blade.html
@@ -1,9 +1,9 @@
-<div modal="showModal" close="cancel()">
+<div modal="showModal">
 	<div class="modal-header">
 		<h4>Thông báo</h4>
 	</div>
 	<div class="modal-body">
-		<p>Thêm mẫu thành công</p>
+		<p>{{message}}</p>
 	</div>
 	<div class="modal-footer">
 		<button class="btn btn-success" ng-click="ok()">Okay</button>
