--- a/app/views/modals/dialogs.blade.html
+++ b/app/views/modals/dialogs.blade.html
@@ -1,11 +1,11 @@
 <div modal="showModal">
 	<div class="modal-header">
-		<h4>Thông báo</h4>
+		<h4><strong>Thông báo</strong></h4>
 	</div>
 	<div class="modal-body">
 		<p>{{message}}</p>
 	</div>
-	<div class="modal-footer">
-		<button class="btn btn-success" ng-click="ok()">Okay</button>
-	</div>
+<!-- 	<div class="modal-footer">
+	    <button class="btn btn-primary" type="button" ng-click="ok()">Okay</button>
+	</div> -->
 </div>
