--- a/app/views/users/manage-post/manage-post.template.html
+++ b/app/views/users/manage-post/manage-post.template.html
@@ -14,7 +14,7 @@
 	<table id="managerpost" class="table table-hover">
 		<div class="dropdown" style="margin-left: 15px;">
 			<button class="btn btn-info" style="margin-bottom: 10px; width: 300px;">Trích xuất file <b class="caret"></b></button>
-			<div class="dropdown-content">
+			<div class="dropdown-content" ng-controller="ModalCtrl">
 			    <a ng-click="export('pdf')"><span class="glyphicon glyphicon-download"></span> Xuất pdf</a>
 			    <a ng-click="export('docx')"><span class="glyphicon glyphicon-download"></span> Xuất docx</a>
 			    <a ng-click="export('xlsx')"><span class="glyphicon glyphicon-download"></span> Xuất xlsx</a>	    
@@ -51,40 +51,30 @@
 				<td>
 					<div class="dropdown">
 						<button class="dropbtn" style="width: 180px;">Action <b class="caret"></b></button>
-						<div class="dropdown-content" ng-if="link == 'dongvat'">
+						<div class="dropdown-content" ng-if="link == 'dong-vat'" ng-controller="ModalCtrl">
 							<a ng-if="restricted.restrict.dongvat.approve" href="" ng-click="approvePost(post._id, post.fApproved)" role="button"><span class="glyphicon glyphicon-{{post.fApproved ? 'ok' : 'warning-sign'}}"></span> {{post.fApproved ? 'Hủy phê duyệt' : ' Phê duyệt'}}</a>
 							<a ng-if="restricted.restrict.dongvat.edit" ui-sref = "chinh-sua-dong-vat({id : post._id})" role="button"><span class="glyphicon glyphicon-pencil"></span> Chỉnh sửa</a>
-							<div ng-controller="ModalCtrl">
-								<a ng-if="restricted.restrict.dongvat.delete" ng-click="showModal(post._id, link)" href="" role="button"><span class="glyphicon glyphicon-trash"></span> Xóa mẫu vật</a>
-							</div>
+							<a ng-if="restricted.restrict.dongvat.delete" ng-click="showModal(post._id, link)" href="" role="button"><span class="glyphicon glyphicon-trash"></span> Xóa mẫu vật</a>
 						</div>
-						<div class="dropdown-content" ng-if="link == 'thucvat'">
+						<div class="dropdown-content" ng-if="link == 'thuc-vat'" ng-controller="ModalCtrl">
 							<a ng-if="restricted.restrict.thucvat.approve" href="" ng-click="approvePost(post._id, post.fApproved)" role="button"><span class="glyphicon glyphicon-{{post.fApproved ? 'ok' : 'warning-sign'}}"></span> {{post.fApproved ? 'Hủy phê duyệt' : ' Phê duyệt'}}</a>
 							<a ng-if="restricted.restrict.thucvat.edit" ui-sref = "chinh-sua-thuc-vat({id : post._id})" role="button"><span class="glyphicon glyphicon-pencil"></span> Chỉnh sửa</a>
-							<div ng-controller="ModalCtrl">
-								<a ng-if="restricted.restrict.thucvat.delete" ng-click="showModal(post._id, link)" href="" role="button"><span class="glyphicon glyphicon-trash"></span> Xóa mẫu vật</a>
-							</div>
+							<a ng-if="restricted.restrict.thucvat.delete" ng-click="showModal(post._id, link)" href="" role="button"><span class="glyphicon glyphicon-trash"></span> Xóa mẫu vật</a>
 						</div>
-						<div class="dropdown-content" ng-if="link == 'cosinh'">
+						<div class="dropdown-content" ng-if="link == 'co-sinh'" ng-controller="ModalCtrl">
 							<a ng-if="restricted.restrict.cosinh.approve" href="" ng-click="approvePost(post._id, post.fApproved)" role="button"><span class="glyphicon glyphicon-{{post.fApproved ? 'ok' : 'warning-sign'}}"></span> {{post.fApproved ? 'Hủy phê duyệt' : ' Phê duyệt'}}</a>
 							<a ng-if="restricted.restrict.cosinh.edit" ui-sref = "chinh-sua-co-sinh({id : post._id})" role="button"><span class="glyphicon glyphicon-pencil"></span> Chỉnh sửa</a>
-							<div ng-controller="ModalCtrl">
-								<a ng-if="restricted.restrict.cosinh.delete" ng-click="showModal(post._id, link)" href="" role="button"><span class="glyphicon glyphicon-trash"></span> Xóa mẫu vật</a>
-							</div>
+							<a ng-if="restricted.restrict.cosinh.delete" ng-click="showModal(post._id, link)" href="" role="button"><span class="glyphicon glyphicon-trash"></span> Xóa mẫu vật</a>
 						</div>
-						<div class="dropdown-content" ng-if="link == 'thonhuong'">
+						<div class="dropdown-content" ng-if="link == 'tho-nhuong'" ng-controller="ModalCtrl">
 							<a ng-if="restricted.restrict.thonhuong.approve" href="" ng-click="approvePost(post._id, post.fApproved)" role="button"><span class="glyphicon glyphicon-{{post.fApproved ? 'ok' : 'warning-sign'}}"></span> {{post.fApproved ? 'Hủy phê duyệt' : ' Phê duyệt'}}</a>
 							<a ng-if="restricted.restrict.thonhuong.edit" ui-sref = "chinh-sua-tho-nhuong({id : post._id})" role="button"><span class="glyphicon glyphicon-pencil"></span> Chỉnh sửa</a>
-							<div ng-controller="ModalCtrl">
-								<a ng-if="restricted.restrict.thonhuong.delete" ng-click="showModal(post._id, link)" href="" role="button"><span class="glyphicon glyphicon-trash"></span> Xóa mẫu vật</a>
-							</div>
+							<a ng-if="restricted.restrict.thonhuong.delete" ng-click="showModal(post._id, link)" href="" role="button"><span class="glyphicon glyphicon-trash"></span> Xóa mẫu vật</a>
 						</div>
-						<div class="dropdown-content" ng-if="link == 'diachat'">
+						<div class="dropdown-content" ng-if="link == 'dia-chat'" ng-controller="ModalCtrl">
 							<a ng-if="restricted.restrict.diachat.approve" href="" ng-click="approvePost(post._id, post.fApproved)" role="button"><span class="glyphicon glyphicon-{{post.fApproved ? 'ok' : 'warning-sign'}}"></span> {{post.fApproved ? 'Hủy phê duyệt' : ' Phê duyệt'}}</a>
 							<a ng-if="restricted.restrict.diachat.edit" ui-sref = "chinh-sua-dia-chat({id : post._id})" role="button"><span class="glyphicon glyphicon-pencil"></span> Chỉnh sửa</a>
-							<div ng-controller="ModalCtrl">
-								<a ng-if="restricted.restrict.diachat.delete" ng-click="showModal(post._id, link)" href="" role="button"><span class="glyphicon glyphicon-trash"></span> Xóa mẫu vật</a>
-							</div>
+							<a ng-if="restricted.restrict.diachat.delete" ng-click="showModal(post._id, link)" href="" role="button"><span class="glyphicon glyphicon-trash"></span> Xóa mẫu vật</a>
 						</div>
 					</div>
 				</td>
