--- a/app/views/guest/dia-chat.template.html
+++ b/app/views/guest/dia-chat.template.html
@@ -4,7 +4,10 @@
 	</div>
 	<div class="list">
 		<div class="form-group">
-			<label for="sel1">Lọc theo: {{filter_property}}</label>
+			<label for="">Lọc theo: </label>
+		</div>
+		<div class="form-group co-xs-12 col-md-4">
+			<label for="sel1">{{filter_property}}</label>
 			<select class="form-control" id="sel1" ng-model="value">
 				<option value="">Tất cả</option>
 				<option ng-repeat="option in filter_list" value="{{option}}">{{option}}</option>
