crop avatar + check old password when user want to change password

--- a/views/admin/users.ejs
+++ b/views/admin/users.ejs
@@ -148,7 +148,7 @@
 												<div class="input-group input-group-md">
 													<input type="text" placeholder="<%= u.maDeTai %>"  class="form-control" disabled value="<%= u.maDeTai %>">
 													<div class="input-group-btn">
-														<button type="button" class="btn btn-danger dropdown-toggle" data-toggle="dropdown">Action
+														<button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">Action
 															<span class="fa fa-caret-down"></span></button>
 														<ul class="dropdown-menu">
 															<li><a style="color: #000" href="#" onclick="revokeManager('<%= u._id %>')">Revoke Manager Role</a></li>
