--- a/views/admin/users.ejs
+++ b/views/admin/users.ejs
@@ -81,7 +81,7 @@
 							<table id="example1" class="table table-bordered table-hover">
 								<thead>
 								<tr>
-									<th>Email</th>
+									<th>Ảnh</th>
 									<th>Tên đầy đủ</th>
 									<th>Cấp bậc</th>
 									<th>Đề tài</th>
@@ -114,8 +114,8 @@
 									u.level = LEVEL[u.level]
 									%>
 									<tr>
-										<td><%= u.username %></td>
-										<td><%= u.fullname %></td>
+										<td><img title="<%= u.username %>" width="50px" class="img-responsive" src="/<%= ('avatar' in u && 'original' in u.avatar) ? u.avatar.original : 'admin/dist/img/user2-160x160.jpg' %>" ></td>
+										<td><%= u.fullname  %></td>
 										<td><span class="<%= u.level.class %>" title="<%= u.maDeTai %>"><%= u.level.name %></span></td>
 										<td><%= u.maDeTai %></td>
 										<% var date = new Date(u.lastLogin) %>
@@ -192,7 +192,7 @@
 								</tbody>
 								<tfoot>
 								<tr>
-									<th>Email</th>
+									<th>Ảnh</th>
 									<th>Tên đầy đủ</th>
 									<th>Cấp bậc</th>
 									<th>Đề tài</th>
