--- a/views/manager/users.ejs
+++ b/views/manager/users.ejs
@@ -69,7 +69,7 @@
 							<table id="example1" class="table table-bordered table-hover">
 								<thead>
 								<tr>
-									<th>Email</th>
+									<th>Ảnh</th>
 									<th>Tên đầy đủ</th>
 									<th>Cấp bậc</th>
 									<th>Lần cuối đăng nhập</th>
@@ -101,7 +101,7 @@
 									u.level = LEVEL[u.level]
 									%>
 									<tr>
-										<td><%= u.username %></td>
+										<td><img title="<%= u.username %>" width="50px" class="img-responsive" src="/<%= ('avatar' in u && 'original' in u.avatar) ? u.avatar.original : 'admin/dist/img/user2-160x160.jpg' %>" ></td>
 										<td><%= u.fullname %></td>
 										<td><span class="<%= u.level.class %>" title="<%= u.maDeTai %>"><%= u.level.name %></span></td>
 										<% var date = new Date(u.lastLogin) %>
@@ -123,7 +123,7 @@
 								</tbody>
 								<tfoot>
 								<tr>
-									<th>Email</th>
+									<th>Ảnh</th>
 									<th>Tên đầy đủ</th>
 									<th>Cấp bậc</th>
 									<th>Lần cuối đăng nhập</th>
